# datasci-2

./: README.md
datasci-2/: index.html  package-lock.json  package.json
server/: .gitignore  main.py  pyproject.toml  valorant.ipynb
server/.ipynb_checkpoints/: player-analysis.ipynb  valorant-checkpoint.ipynb
